# Zammad-MCP

./: .codacy.yaml  .codacy.yml  .coderabbit.yaml  .dockerignore  .env.example  .envrc  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .mcp.json  .pre-commit-config.yaml  .rumdl.toml  .safety-project.ini  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  bandit-sarif.json  cliff.toml  conductor.json  docker-compose.yml  mise.toml  pyproject.toml  renovate.json
.agents/plugins/: marketplace.json
.claude/: hookify.protect-changelog.local.md  hookify.use-rg-not-grep.local.md  settings.local.json
.claude/agents/: commit-craft.md
.claude/commands/: git_commit.md  git_commitv2.md  prime.md  primev2.md  primev3.md
.claude/hooks/: pre_tool_use.py
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/mcp-builder/reference/: evaluation.md  mcp_best_practices.md  python_mcp_server.md
.claude/skills/zammad-mcp-quality/: SKILL.md
.claude/skills/zammad-mcp-quality/references/: coderabbit-learnings.md  error-handling-guide.md  pagination-patterns.md  pre-pr-checklist.md  type-annotation-standards.md
.claude/skills/zammad-mcp-quality/scripts/: extract_feedback.py
.codacy/: codacy.yaml
.codex/skills/zammad-mcp-issue-digest/: SKILL.md
.codex/skills/zammad-mcp-issue-digest/scripts/: collect_issue_digest.py  post_triage_digest.py  test_collect_issue_digest.py  test_triage_issue.py  triage_common.py  triage_issue.py
.codex/skills/zammad-mcp-pr-digest/: SKILL.md
.codex/skills/zammad-mcp-pr-digest/agents/: openai.yaml
.codex/skills/zammad-mcp-pr-digest/scripts/: collect_pr_digest.py  test_triage_pr.py  triage_pr.py
.devcontainer/: devcontainer.json  setup-mise.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codacy.yml  copilot-setup-steps.yml  docker-publish.yml  issue-triage.yml  pr-triage.yml  security-scan.yml  sync-labels.yml  tests.yml  triage-digest.yml
docs/: LEGACY_WRAPPER_DEPRECATION.md  MIGRATION_GUIDE.md  PHASE3_MIGRATION_PLAN.md  claude-pre-tool-use-hook.md  git-commit-slah-command.md  git-commit-slash-command.md  ultimate-single-command.md  uv-scripts-opportunities.md
docs/ai-docs/: cc_hooks_docs.md  codacy-cli-v2.md
docs/audits/: AUDIT_REPORT_2026-07-11.md
docs/deployment/: http-transport.md
docs/dev/: renovate-and-branch-rules.md
docs/plans/: 2025-01-16-attachment-upload-delete-design.md  2025-01-16-attachment-upload-delete.md  2025-11-15-mcp-audit-fixes.md  2025-11-16-streamable-http-transport.md
docs/reviews/: comprehensive-repo-review-2026-02-26.md  mcp-server-audit-2025-11-15.md
mcp_zammad/: __main__.py  client.py  config.py  docstring_templates.py  models.py  pii_client.py  product_names.txt  server.py
plugins/zammad-mcp/.codex-plugin/: plugin.json
plugins/zammad-mcp/references/: codacy-mcp.md  maintainer-workflows.md
plugins/zammad-mcp/references/mcp-builder/reference/: mcp_best_practices.md  python_mcp_server.md
plugins/zammad-mcp/references/mcp-builder/scripts/: connections.py  evaluation.py  requirements.txt
plugins/zammad-mcp/skills/zammad-mcp-issue-digest/: SKILL.md
plugins/zammad-mcp/skills/zammad-mcp-issue-digest/agents/: openai.yaml
plugins/zammad-mcp/skills/zammad-mcp-pr-digest/: SKILL.md
plugins/zammad-mcp/skills/zammad-mcp-quality/: SKILL.md
scripts/: bootstrap.sh  conductor-setup.sh  docker-build.sh  quality-check.sh  setup.ps1  setup.sh
scripts/uv/: README.md  coverage-report.py  dev-setup.py  security-scan.py  test-zammad.py  utils.py  validate-env.py
tests/: conftest.py  test_client.py  test_client_methods.py  test_config.py  test_docstring_templates.py  test_kb.py  test_kb_readonly.py  test_main.py  test_models.py  test_server.py
tests/integration/: __init__.py  test_http_transport.py
(+14 files in other folders)
